# Diet-Manager-OOPS-Project

./: .gitignore  CMakeLists.txt  README.md  classes.md  summary_gautam.md
docs/: classes.md  sequences.md
planning/: commands.md
src/: cli.cpp  cli.h  main.cpp
src/daily_log/: DailyLog.cpp  DailyLog.h
src/database/: FoodDatabase.cpp  FoodDatabase.h
src/diet_goal/: DietGoalProfile.cpp  DietGoalProfile.h
src/food/: BasicFood.cpp  BasicFood.h  CompositeFood.cpp  CompositeFood.h  Food.cpp  Food.h
src/utils/: FileHandler.cpp  FileHandler.h
